# rivian-python-client

./: CHANGELOG.md  CLAUDE.md  README.md  decode_halloween_payloads.py  decode_mitm_payloads.py  get_vehicle_id.py  introspect_schemas.py  pyproject.toml  requirements.txt  test_all_parallax.py  test_all_parallax_ios.py  test_all_rvm_types.py  test_climate_hold_live.py  test_climate_hold_v2.py  test_debug_graphql.py  test_fixes.py  test_halloween_ios.py  test_location_formats.py  test_new_v2_2_methods.py  test_payload_inspection.py  test_protobuf_serialization.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
docs/: README.md
docs/api/: API_COVERAGE.md
docs/development/: BEARER_TOKEN_TEST_RESULTS.md  GEN2_ANALYSIS_INDEX.md  GEN2_BLE_PROTOCOL_ANALYSIS.md  HALLOWEEN_ANALYSIS.md  HALLOWEEN_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v2.2.md  MANUAL_PARALLAX_AUDIT.md  MITM_API_AUDIT.md  MITM_UPDATES.md  PARALLAX_TEST_RESULTS.md  SENDVEHICLEOPERATION_TEST_RESULTS.md  STACK_TRACE_ANALYSIS.md  TEST_RESULTS_v2.2.md  gemini_analysis.md  gemini_audit_prompt.md
docs/protocols/: BLE_PROTOCOLS.md  BLE_UUIDS_REFERENCE.md  GEN2_PROTOCOL_SUMMARY.md  KEY_FOB_V2.md  PARALLAX_IMPLEMENTATION_SUMMARY.md  PARALLAX_PROTOCOL.md  PROTOCOL_ANALYSIS_SUMMARY.txt
examples/: parallax_live_data.py  v2_1_automated_test.py  v2_1_live_test.py  verify_existing_api.py
src/rivian/: __init__.py  ble.py  ble_gen2.py  ble_gen2_proto.py  const.py  parallax.py  rivian.py  schema.py
src/rivian/proto/: __init__.py  base.py  charging.py  climate.py  energy.py  navigation.py  ota.py  rivian_base.proto  rivian_base_pb2.py  security.py  (+22 more)
tests/: ble_gen2_test.py  responses.py  rivian_test.py  test_parallax.py
